--- a/appProject/package.json
+++ b/appProject/package.json
@@ -18,6 +18,17 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fullcalendar/angular": "^5.10.2",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "angular-calendar": "^0.29.0",
+    "angularx-flatpickr": "^6.6.0",
+    "date-fns": "^2.28.0",
+    "file-saver": "^2.0.5",
+    "flatpickr": "^4.6.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "tui-calendar": "^1.15.3",
@@ -28,7 +39,7 @@
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.47",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
